--- a/vasl.html
+++ b/vasl.html
@@ -6,14 +6,14 @@
   <title>ابزارهای اتصال (وصل)</title>
   <link rel="stylesheet" href="src/main-style.css">
 </head>
-<body>
-  <header id="main-header"><!-- هدر یکسان --></header>
-  <main class="vasl-main">
-    <h1>ابزارهای اتصال (وصل)</h1>
-    <div id="vasl-list" class="vasl-list"></div>
-  </main>
-  <footer id="main-footer"><!-- فوتر یکسان --></footer>
-  <script src="src/vasl.js"></script>
-  <script src="src/common-header-footer.js"></script>
+<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
+    <header id="main-header"></header>
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+      <h1>ابزارهای اتصال (وصل)</h1>
+      <div id="vasl-list" class="vasl-list"></div>
+    </main>
+    <footer id="main-footer"></footer>
+    <script src="src/common-header-footer.js"></script>
+    <script src="src/vasl.js"></script>
 </body>
 </html>
