--- a/main.html
+++ b/main.html
@@ -88,15 +88,9 @@
     }
   </style>
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
-  <!-- Header -->
-  <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl sm:text-3xl font-extrabold">برای ایران</h1>
-      <!-- حذف منو برای صفحات غیر index -->
-    </div>
-  </header>
-  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+<body class="min-h-screen text-gray-800 flex flex-col">
+    <header id="main-header"></header>
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
     <div id="root"></div>
     <script type="text/babel">
       const ProjectCard = ({ project, collaborators }) => {
@@ -223,12 +217,8 @@
 
       ReactDOM.render(<App />, document.getElementById('root'));
     </script>
-  </main>
-  <!-- Footer -->
-  <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
-    <div class="container mx-auto px-6 py-4 text-center">
-      <p class="text-sm">© 1404 برای ایران</p>
-    </div>
-  </footer>
-</body>
+    </main>
+    <footer id="main-footer"></footer>
+    <script src="src/common-header-footer.js"></script>
+  </body>
 </html>
