--- a/about.html
+++ b/about.html
@@ -63,25 +63,19 @@
     }
   </style>
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
-  <header id="main-header"></header>
-  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
-    <div class="about-container">
-      <h1>درباره ما</h1>
-      <div class="about-text">
-        پروژه <span class="about-highlight">برای ایران</span> با هدف حمایت از مردم ایران در شرایط سخت و محدودیت‌های اینترنتی راه‌اندازی شده است. وقتی اینترنت ایران دچار اختلال یا قطع می‌شود و یا وی‌پی‌ان‌ها به‌درستی کار نمی‌کنند، فشار زیادی به مردم وارد می‌شود. ما تلاش کردیم با جمع‌آوری و معرفی <span class="about-highlight">بیزینس‌ها و خدمات رایگان</span>، اوقات فراغت شما را پربارتر کنیم و کمی از این فشار بکاهیم.<br><br>
-        همچنین با توجه به <span class="about-highlight">هزینه بالای جابه‌جایی</span>، سعی کردیم اطلاعات حمل‌ونقل را جمع‌آوری کنیم تا بتوانید راحت‌تر و ارزان‌تر سفر کنید. هزینه اقامتگاه‌ها هم معمولاً زیاد است؛ به همین دلیل، <span class="about-highlight">اقامتگاه‌های رایگان یا ارزان</span> را معرفی کردیم تا هزینه‌های شما کمتر شود.<br><br>
-        علاوه بر این، <span class="about-highlight">شماره‌های اضطراری</span> را نیز در سایت قرار دادیم تا در مواقع نیاز بتوانید به سرعت به کمک دسترسی داشته باشید.<br><br>
-        این سایت روی سرور ایران میزبانی می‌شود و همیشه در دسترس است. آدرس سایت ساده است و به راحتی در ذهن می‌ماند. با این حال، اگر گزینه <span class="about-highlight">Add to Home Screen</span> را انتخاب کنید، دسترسی شما بسیار راحت‌تر خواهد بود و سایت مثل یک اپلیکیشن همیشه همراه شماست.
+<body class="min-h-screen text-gray-800 flex flex-col">
+    <header id="main-header"></header>
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+      <div class="about-container">
+        <h1>درباره ما</h1>
+        <div class="about-text">
+          پروژه <span class="about-highlight">برای ایران</span> با هدف حمایت از مردم ایران در شرایط سخت و محدودیت‌های اینترنتی راه‌اندازی شده است. وقتی اینترنت ایران دچار اختلال یا قطع می‌شود و یا وی‌پی‌ان‌ها به‌درستی کار نمی‌کنند، فشار زیادی به مردم وارد می‌شود. ما تلاش کردیم با جمع‌آوری و معرفی <span class="about-highlight">بیزینس‌ها و خدمات رایگان</span>، اوقات فراغت شما را پربارتر کنیم و کمی از این فشار بکاهیم.<br><br>
+          همچنین با توجه به <span class="about-highlight">هزینه بالای جابه‌جایی</span>، سعی کردیم اطلاعات حمل‌ونقل را جمع‌آوری کنیم تا بتوانید راحت‌تر و ارزان‌تر سفر کنید. هزینه اقامتگاه‌ها هم معمولاً زیاد است؛ به همین دلیل، <span class="about-highlight">اقامتگاه‌های رایگان یا ارزان</span> را معرفی کردیم تا هزینه‌های شما کمتر شود.<br><br>
+          علاوه بر این، <span class="about-highlight">شماره‌های اضطراری</span> را نیز در سایت قرار دادیم تا در مواقع نیاز بتوانید به سرعت به کمک دسترسی داشته باشید.<br><br>
+        </div>
       </div>
-      <div class="about-footer">
-        با آرزوی آرامش و رفاه برای همه مردم ایران 🌱<br><br>
-        ارتباط با مسئول سایت: <a href="https://t.me/m4tinbeigipv" class="about-highlight" target="_blank">@m4tinbeigipv (ریک سانچز)</a><br><br>
-        <span style="color:#0ea5e9;font-weight:bold">دعوت به همکاری:</span> اگر کسب‌وکار یا خدمتی دارید و می‌خواهید به مردم کمک کنید یا پیشنهادی دارید، لطفاً به آیدی بالا پیام دهید.
-      </div>
-    </div>
-  </main>
-  <footer id="main-footer"></footer>
-  <script src="src/common-header-footer.js"></script>
+    </main>
+    <footer id="main-footer"></footer>
+    <script src="src/common-header-footer.js"></script>
 </body>
 </html>
