--- a/free_services.html
+++ b/free_services.html
@@ -9,7 +9,7 @@
   <link href="src/main-style.css" rel="stylesheet">
   <link href="src/businesses.css" rel="stylesheet">
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
       <h1 class="text-2xl font-bold text-blue-900 mb-8 text-center">خدمات رایگان</h1>
