--- a/SOS.html
+++ b/SOS.html
@@ -11,7 +11,7 @@
     <link href="src/main-style.css" rel="stylesheet">
     <!-- حذف استایل‌های داخلی و انتقال کامل به main-style.css -->
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
     <div class="container">
