--- a/vasl.html
+++ b/vasl.html
@@ -6,7 +6,7 @@
   <title>ابزارهای اتصال (وصل)</title>
   <link rel="stylesheet" href="src/main-style.css">
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
       <h1>ابزارهای اتصال (وصل)</h1>
