--- a/SOS.html
+++ b/SOS.html
@@ -18,6 +18,7 @@
         <div class="header">
             <h1>لیست شماره‌های اضطراری</h1>
             <p class="lead">این شماره‌ها را همین حالا ذخیره کنید!</p>
+            <p class="lead" style="color:#e11d48;font-weight:700;">گرانفروشی را به شماره‌های <a href="tel:124" style="color:#2563eb;">۱۲۴</a> و <a href="tel:135" style="color:#2563eb;">۱۳۵</a> گزارش کنید.</p>
         </div>
 
         <div class="download-btn">
@@ -32,34 +33,36 @@
         <div class="emergency-section">
             <h4>شماره‌های اضطراری با اولویت بالا (حیاتی)</h4>
             <ul class="emergency-list">
-                <li><strong><a href="tel:115">اورژانس پزشکی (۱۱۵)</a>:</strong> برای درمان سریع بیماری‌ها یا جراحات جدی، تصادفات، مسمومیت، بیهوشی یا سکته.</li>
-                <li><strong><a href="tel:125">آتش‌نشانی (۱۲۵)</a>:</strong> برای مقابله با آتش‌سوزی، انفجار، ریزش ساختمان یا نجات جان افراد گرفتار.</li>
-                <li><strong><a href="tel:110">پلیس (۱۱۰)</a>:</strong> در موارد تهدید جانی، سرقت، نزاع خیابانی، ناامنی، حمله یا موقعیت‌های جنایی.</li>
-                <li><strong><a href="tel:113">اداره کل اطلاعات (۱۱۳)</a>:</strong> جهت گزارش فعالیت‌های مشکوک، خرابکاری، تهدیدات امنیت ملی یا تروریستی.</li>
-                <li><strong><a href="tel:114">اطلاعات سپاه (۱۱۴)</a>:</strong> برای اطلاع‌رسانی درباره تهدیدات سایبری، خرابکاری، اقدامات ضدانقلابی یا شبه‌نظامی.</li>
-                <li><strong><a href="tel:112">هلال‌احمر (۱۱۲)</a>:</strong> برای کمک در بحران‌های طبیعی مانند زلزله، سیل، طوفان یا سایر حوادث گسترده.</li>
+                <li><strong><a href="tel:115">اورژانس پزشکی (<span dir="ltr">۱۱۵</span>)</a>:</strong> برای درمان سریع بیماری‌ها یا جراحات جدی، تصادفات، مسمومیت، بیهوشی یا سکته.</li>
+                <li><strong><a href="tel:125">آتش‌نشانی (<span dir="ltr">۱۲۵</span>)</a>:</strong> برای مقابله با آتش‌سوزی، انفجار، ریزش ساختمان یا نجات جان افراد گرفتار.</li>
+                <li><strong><a href="tel:110">پلیس (<span dir="ltr">۱۱۰</span>)</a>:</strong> در موارد تهدید جانی، سرقت، نزاع خیابانی، ناامنی، حمله یا موقعیت‌های جنایی.</li>
+                <li><strong><a href="tel:113">اداره کل اطلاعات (<span dir="ltr">۱۱۳</span>)</a>:</strong> جهت گزارش فعالیت‌های مشکوک، خرابکاری، تهدیدات امنیت ملی یا تروریستی.</li>
+                <li><strong><a href="tel:114">اطلاعات سپاه (<span dir="ltr">۱۱۴</span>)</a>:</strong> برای اطلاع‌رسانی درباره تهدیدات سایبری، خرابکاری، اقدامات ضدانقلابی یا شبه‌نظامی.</li>
+                <li><strong><a href="tel:112">هلال‌احمر (<span dir="ltr">۱۱۲</span>)</a>:</strong> برای کمک در بحران‌های طبیعی مانند زلزله، سیل، طوفان یا سایر حوادث گسترده.</li>
             </ul>
         </div>
 
         <div class="emergency-section">
             <h4>شماره‌های اضطراری با اولویت متوسط (مهم و کاربردی)</h4>
             <ul class="emergency-list">
-                <li><strong><a href="tel:123">اورژانس اجتماعی (۱۲۳)</a>:</strong> برای گزارش کودک‌آزاری، همسرآزاری، سالمندآزاری و بحران‌های خانوادگی یا اجتماعی.</li>
-                <li><strong><a href="tel:194">امداد گاز (۱۹۴)</a>:</strong> در صورت نشت گاز، بوی گاز، ترکیدگی لوله‌ها یا مشکلات شبکه گازرسانی.</li>
-                <li><strong><a href="tel:121">امداد برق (۱۲۱)</a>:</strong> برای اعلام قطعی برق، نوسانات شدید، اتصال خطرناک یا آتش‌سوزی ناشی از برق.</li>
-                <li><strong><a href="tel:122">امداد آب و فاضلاب (۱۲۲)</a>:</strong> در صورت ترکیدگی لوله، نشت شدید، آلودگی آب یا قطع آب شهری.</li>
+                <li><strong><a href="tel:123">اورژانس اجتماعی (<span dir="ltr">۱۲۳</span>)</a>:</strong> برای گزارش کودک‌آزاری، همسرآزاری، سالمندآزاری و بحران‌های خانوادگی یا اجتماعی.</li>
+                <li><strong><a href="tel:194">امداد گاز (<span dir="ltr">۱۹۴</span>)</a>:</strong> در صورت نشت گاز، بوی گاز، ترکیدگی لوله‌ها یا مشکلات شبکه گازرسانی.</li>
+                <li><strong><a href="tel:121">امداد برق (<span dir="ltr">۱۲۱</span>)</a>:</strong> برای اعلام قطعی برق، نوسانات شدید، اتصال خطرناک یا آتش‌سوزی ناشی از برق.</li>
+                <li><strong><a href="tel:122">امداد آب و فاضلاب (<span dir="ltr">۱۲۲</span>)</a>:</strong> در صورت ترکیدگی لوله، نشت شدید، آلودگی آب یا قطع آب شهری.</li>
             </ul>
         </div>
 
         <div class="emergency-section">
             <h4>شماره‌های اضطراری با اولویت پشتیبانی (اطلاعاتی و کمکی)</h4>
             <ul class="emergency-list">
-                <li><strong><a href="tel:120">پلیس راه (۱۲۰)</a>:</strong> برای اطلاع از وضعیت جاده‌ها، تصادف، انسداد راه‌ها یا شرایط بد جوی.</li>
-                <li><strong><a href="tel:096380">پلیس فتا (۰۹۶۳۸۰)</a>:</strong> برای گزارش جرایم اینترنتی، کلاهبرداری دیجیتال، هک، تهدید آنلاین یا فیشینگ.</li>
-                <li><strong><a href="tel:191">داروخانه‌های شبانه‌روزی (۱۹۱)</a>:</strong> برای دریافت نشانی و شماره تماس نزدیک‌ترین داروخانه فعال در ساعات غیراداری.</li>
-                <li><strong><a href="tel:134">هواشناسی (۱۳۴)</a>:</strong> جهت آگاهی از وضعیت آب‌وهوا، هشدار طوفان، یخبندان یا بارش شدید.</li>
-                <li><strong><a href="tel:199">اطلاعات پرواز (۱۹۹)</a>:</strong> در صورت نیاز به پیگیری تأخیر یا لغو پرواز در زمان‌های بحرانی.</li>
-                <li><strong><a href="tel:118">اطلاعات تلفن ثابت (۱۱۸)</a>:</strong> برای جست‌وجوی شماره تماس مراکز درمانی، خدماتی یا امدادی خاص.</li>
+                <li><strong><a href="tel:120">پلیس راه (<span dir="ltr">۱۲۰</span>)</a>:</strong> برای اطلاع از وضعیت جاده‌ها، تصادف، انسداد راه‌ها یا شرایط بد جوی.</li>
+                <li><strong><a href="tel:096380">پلیس فتا (<span dir="ltr">۰۹۶۳۸۰</span>)</a>:</strong> برای گزارش جرایم اینترنتی، کلاهبرداری دیجیتال، هک، تهدید آنلاین یا فیشینگ.</li>
+                <li><strong><a href="tel:191">داروخانه‌های شبانه‌روزی (<span dir="ltr">۱۹۱</span>)</a>:</strong> برای دریافت نشانی و شماره تماس نزدیک‌ترین داروخانه فعال در ساعات غیراداری.</li>
+                <li><strong><a href="tel:134">هواشناسی (<span dir="ltr">۱۳۴</span>)</a>:</strong> جهت آگاهی از وضعیت آب‌وهوا، هشدار طوفان، یخبندان یا بارش شدید.</li>
+                <li><strong><a href="tel:199">اطلاعات پرواز (<span dir="ltr">۱۹۹</span>)</a>:</strong> در صورت نیاز به پیگیری تأخیر یا لغو پرواز در زمان‌های بحرانی.</li>
+                <li><strong><a href="tel:118">اطلاعات تلفن ثابت (<span dir="ltr">۱۱۸</span>)</a>:</strong> برای جست‌وجوی شماره تماس مراکز درمانی، خدماتی یا امدادی خاص.</li>
+                <li><strong><a href="tel:124">گزارش گرانفروشی (<span dir="ltr">۱۲۴</span>)</a>:</strong> برای گزارش تخلفات صنفی و گرانفروشی.</li>
+                <li><strong><a href="tel:135">گزارش گرانفروشی (<span dir="ltr">۱۳۵</span>)</a>:</strong> برای گزارش تخلفات صنفی و گرانفروشی.</li>
             </ul>
         </div>
 
