--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
   <link href="src/font-face.css" rel="stylesheet">
   <link href="src/main-style.css" rel="stylesheet">
   <style>
+    /* حذف استایل‌های هدر و فوتر داخلی، استفاده فقط از main-style.css */
     body {
       background: linear-gradient(to bottom, #eff6ff, #dbeafe);
       min-height: 100vh;
