--- a/businesses.html
+++ b/businesses.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>کسب‌وکارهای حامی مردم - برای ایران</title>
+  <link href="src/tailwind.min.css" rel="stylesheet">
   <link href="src/font-face.css" rel="stylesheet">
-  <link href="src/businesses.css" rel="stylesheet">
+  <link href="src/main-style.css" rel="stylesheet">
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
