--- a/free_services.html
+++ b/free_services.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>خدمات رایگان - برای ایران</title>
+  <link href="src/tailwind.min.css" rel="stylesheet">
   <link href="src/font-face.css" rel="stylesheet">
   <link href="src/main-style.css" rel="stylesheet">
   <link href="src/businesses.css" rel="stylesheet">
