--- a/Residences.html
+++ b/Residences.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>اقامتگاه‌های رایگان یا ارزان</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="src/tailwind.min.css" rel="stylesheet">
+  <link href="src/font-face.css" rel="stylesheet">
+  <link href="src/main-style.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Vazirmatn', sans-serif;
