--- a/news.html
+++ b/news.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>اخبار - برای ایران</title>
-  <link href="src/bootstrap.rtl.min.css" rel="stylesheet" />
+  <link href="src/tailwind.min.css" rel="stylesheet">
+  <link href="src/font-face.css" rel="stylesheet">
+  <link href="src/main-style.css" rel="stylesheet">
   <style>
     @font-face {
       font-family: 'Vazir';
@@ -173,7 +175,7 @@
     }
   </style>
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
       <h1 class="text-center my-4">📢 آخرین اخبار</h1>
