--- a/SOS.html
+++ b/SOS.html
@@ -6,6 +6,7 @@
     <title>شماره‌های اضطراری ایران</title>
     <!-- Bootstrap CSS -->
     <link href="src/bootstrap.bundle.min.js" rel="stylesheet">
+    <link href="src/tailwind.min.css" rel="stylesheet">
     <!-- Vazir Font -->
     <link href="src/Vazirmatn-font-face.css" rel="stylesheet">
     <link href="src/main-style.css" rel="stylesheet">
@@ -38,7 +39,6 @@
                 <li><strong><a href="tel:110">پلیس (<span dir="ltr">۱۱۰</span>)</a>:</strong> در موارد تهدید جانی، سرقت، نزاع خیابانی، ناامنی، حمله یا موقعیت‌های جنایی.</li>
                 <li><strong><a href="tel:113">اداره کل اطلاعات (<span dir="ltr">۱۱۳</span>)</a>:</strong> جهت گزارش فعالیت‌های مشکوک، خرابکاری، تهدیدات امنیت ملی یا تروریستی.</li>
                 <li><strong><a href="tel:114">اطلاعات سپاه (<span dir="ltr">۱۱۴</span>)</a>:</strong> برای اطلاع‌رسانی درباره تهدیدات سایبری، خرابکاری، اقدامات ضدانقلابی یا شبه‌نظامی.</li>
-                <li><strong><a href="tel:112">هلال‌احمر (<span dir="ltr">۱۱۲</span>)</a>:</strong> برای کمک در بحران‌های طبیعی مانند زلزله، سیل، طوفان یا سایر حوادث گسترده.</li>
             </ul>
         </div>
 
