--- a/main.html
+++ b/main.html
@@ -240,9 +240,8 @@
             </div>
             <div className="section mt-10 text-center">
               <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
-              <p>آیدی تلگرام مسئول: <a href="https://t.me/m4tinbeigipv" className="text-blue-400 hover:underline">@m4tinbeigipv</a></p>
-              <p>گروه تلگرام: <a href="#" className="text-blue-400 hover:underline">لینک گروه برای ایران</a></p>
-              <p>کانال تلگرام: <a href="#" className="text-blue-400 hover:underline">کانال برای ایران</a></p>
+              <p>گروه تلگرام: <a href="https://t.me/+1wxyzaCKatliYTg0" className="text-blue-400 hover:underline">لینک گروه برای ایران</a></p>
+              <p>کانال تلگرام: <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="text-blue-400 hover:underline">کانال برای ایران</a></p>
             </div>
           </div>
         );
