--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2 class="text-xl font-bold text-blue-900 mb-3" id="add-to-home-title"></h2>
       <p class="mb-3 text-gray-700 text-sm" id="add-to-home-desc"></p>
       <ol class="list-decimal list-inside space-y-2 text-gray-700 text-right text-sm" id="add-to-home-steps"></ol>
-      <button id="installPrompt" class="mt-4 bg-blue-600 text-white px-6 py-2 rounded-lg btn hover:bg-blue-700 text-sm">
+      <button id="installPrompt" class="hidden mt-4 bg-blue-600 text-white px-6 py-2 rounded-lg btn hover:bg-blue-700 text-sm">
         افزودن به صفحه اصلی
       </button>
       <div class="mt-4 text-red-600 font-bold text-sm">⚠️ لطفاً لینک را پیامک نکنید. ارسال لینک از طریق پیامک ممکن نیست.</div>
