--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>برای ایران - لیست پروژه‌ها</title>
+  <title>لیست پروژه‌های برای ایران</title>
   <script src="src/react.production.min.js"></script>
   <script src="src/react-dom.production.min.js"></script>
   <script src="src/babel.min.js"></script>
@@ -209,7 +209,7 @@
 
         return (
           <div className="container mx-auto py-10 px-4">
-            <h1 className="text-4xl font-bold text-center mb-10">برای ایران - لیست پروژه‌ها</h1>
+            <h1 className="text-4xl font-bold text-center mb-10">لیست پروژه‌ها</h1>
             <div className="section">
               {projects.map(project => (
                 <ProjectCard key={project.id} project={project} collaborators={collaborators} />
