--- a/main.html
+++ b/main.html
@@ -226,7 +226,7 @@
                         alt={collab.name} 
                         className="member-img mb-2" 
                       />
-                      <div>{collab.name}</div>
+                      <div style={{color:'#0ea5e9', fontWeight:'bold'}}>{collab.name}</div>
                       {collab.position && (
                         <div className="text-xs text-blue-200 mt-1">{collab.position}</div>
                       )}
@@ -240,8 +240,12 @@
             </div>
             <div className="section mt-10 text-center">
               <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
-              <p>گروه تلگرام: <a href="https://t.me/+1wxyzaCKatliYTg0" className="text-blue-400 hover:underline">لینک گروه برای ایران</a></p>
-              <p>کانال تلگرام: <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="text-blue-400 hover:underline">کانال برای ایران</a></p>
+              <p>گروه تلگرام: <a href="https://t.me/+1wxyzaCKatliYTg0" className="text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold', display:'inline-flex', alignItems:'center'}}>
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
+  لینک گروه برای ایران</a></p>
+<p>کانال تلگرام: <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold', display:'inline-flex', alignItems:'center'}}>
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
+  کانال برای ایران</a></p>
             </div>
           </div>
         );
