--- a/news.html
+++ b/news.html
@@ -70,7 +70,7 @@
       background-color: #1e3a8a;
     }
 
-    .bg-blue-900/90 {
+    .bg-blue-600 {
       background-color: rgba(30, 58, 138, 0.9);
     }
 
