--- a/main.html
+++ b/main.html
@@ -219,33 +219,38 @@
               <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">همه همکاران</h2>
               <div className="flex flex-wrap gap-6 justify-center">
                 {collaborators.map(collab => (
-                  <div key={collab.id} className="text-center">
-                    <a href={collab.link} target="_blank" rel="noopener noreferrer">
-                      <img 
-                        src={collab.image || "https://via.placeholder.com/100"} 
-                        alt={collab.name} 
-                        className="member-img mb-2" 
-                      />
-                      <div style={{color:'#0ea5e9', fontWeight:'bold'}}>{collab.name}</div>
-                      {collab.position && (
-                        <div className="text-xs text-blue-200 mt-1">{collab.position}</div>
-                      )}
-                      {collab.description && !collab.position && (
-                        <div className="text-xs text-blue-200 mt-1">{collab.description}</div>
-                      )}
-                    </a>
-                  </div>
+                  <div key={collab.id} className="text-center" style={{margin:'0 0.5rem 1.2rem 0'}}>
+  <a href={collab.link} target="_blank" rel="noopener noreferrer">
+    <img 
+      src={collab.image || "https://via.placeholder.com/100"} 
+      alt={collab.name} 
+      className="member-img mb-2" 
+      style={{margin:'0 auto', display:'block'}}
+    />
+    <div style={{color:'#1e293b', fontWeight:'bold', fontSize:'1rem', marginTop:'0.2rem'}}>{collab.name}</div>
+    {collab.position && (
+      <div className="text-xs text-blue-700 mt-1">{collab.position}</div>
+    )}
+    {collab.description && !collab.position && (
+      <div className="text-xs text-blue-700 mt-1">{collab.description}</div>
+    )}
+  </a>
+</div>
                 ))}
               </div>
             </div>
             <div className="section mt-10 text-center">
               <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
-              <p>گروه تلگرام: <a href="https://t.me/+1wxyzaCKatliYTg0" className="text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold', display:'inline-flex', alignItems:'center'}}>
-  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
-  لینک گروه برای ایران</a></p>
-<p>کانال تلگرام: <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold', display:'inline-flex', alignItems:'center'}}>
-  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
-  کانال برای ایران</a></p>
+              <p>
+  <a href="https://t.me/+1wxyzaCKatliYTg0" className="inline-flex items-center text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold'}} title="گروه تلگرام">
+    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
+  </a>
+</p>
+<p>
+  <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="inline-flex items-center text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold'}} title="کانال تلگرام">
+    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
+  </a>
+</p>
             </div>
           </div>
         );
@@ -256,5 +261,18 @@
     </main>
     <footer id="main-footer"></footer>
     <script src="src/common-header-footer.js"></script>
+    <style>
+@media (max-width: 600px) {
+  .flex.flex-wrap.gap-6.justify-center > div {
+    width: 48%;
+    min-width: 120px;
+    margin-bottom: 1.2rem;
+  }
+  .member-img {
+    width: 38px !important;
+    height: 38px !important;
+  }
+}
+</style>
   </body>
 </html>
