--- a/main.html
+++ b/main.html
@@ -127,6 +127,26 @@
         width: 26px;
         height: 26px;
       }
+      .flex.flex-wrap.gap-6.justify-center {
+        flex-direction: row !important;
+        flex-wrap: wrap !important;
+        gap: 0.3rem !important;
+        justify-content: flex-start !important;
+        align-items: center !important;
+      }
+      .flex.flex-wrap.gap-6.justify-center > div {
+        width: auto !important;
+        min-width: unset !important;
+        margin-bottom: 0.2rem !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        padding: 0 !important;
+      }
+      .member-img {
+        width: 32px !important;
+        height: 32px !important;
+        margin-bottom: 0.1rem !important;
+      }
     }
   </style>
 </head>
