--- a/main.html
+++ b/main.html
@@ -75,7 +75,8 @@
       border: 1.5px solid #fff3;
     }
     .section h2, .section h1, .section h3 {
-      color: #0ea5e9 !important;
+      text-align:center;
+      color: #324c95 !important;
       font-weight: 900;
       text-shadow: 0 1px 2px rgba(0,0,0,0.07);
     }
