--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
       background: #f9fafb;
     }
     .bg-gray-800 {
-      background: #1e293b !important; /* رنگ تیره‌تر */
+      background: #324c95 !important; /* رنگ تیره‌تر */
       color: #f1f5f9 !important; /* متن روشن‌تر */
       border: none;
       box-shadow: 0 4px 24px 0 rgba(30,41,59,0.10), 0 1.5px 4px 0 rgba(30,41,59,0.08);
