--- a/ir.html
+++ b/ir.html
@@ -17,6 +17,8 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
+            /* حذف padding-top و padding-bottom */
+            padding: 0.5rem 0.2rem;
         }
         .header {
             text-align: center;
@@ -97,33 +99,8 @@
                 padding: 15px;
             }
         }
-        /* استایل‌های جدید برای هدر و فوتر ثابت */
-        body {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-        header, footer {
-            position: fixed;
-            left: 0;
-            right: 0;
-            background: rgba(0, 123, 255, 0.9);
-            backdrop-filter: blur(10px);
-            color: white;
-            z-index: 10;
-        }
-        header {
-            top: 0;
-            padding: 10px 0;
-        }
-        footer {
-            bottom: 0;
-            padding: 10px 0;
-        }
-        .container {
-            padding-top: 80px;
-            padding-bottom: 80px;
-        }
+        /* حذف استایل‌های هدر و فوتر ثابت */
+        /* حذف استایل‌های header, footer و container مربوط به fixed و blur و ... */
         @media (max-width: 768px) {
             header h1 {
                 font-size: 1.5rem;
