--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
     const installButton = document.getElementById('installPrompt');
     const installMsg = document.getElementById('installPromptMsg');
     let canInstall = false;
+    // Utility: Detect iOS
+    function isIOS() {
+      return /iphone|ipad|ipod/i.test(navigator.userAgent);
+    }
+    // Utility: Detect Android
+    function isAndroid() {
+      return /android/i.test(navigator.userAgent);
+    }
+    // Utility: Detect Chrome
+    function isChrome() {
+      return /chrome/i.test(navigator.userAgent) && !/edge|edg|opr|opera|brave/i.test(navigator.userAgent);
+    }
     if(installButton) {
       window.addEventListener('beforeinstallprompt', (e) => {
         e.preventDefault();
@@ -130,16 +142,31 @@
           deferredPrompt.prompt();
           const { outcome } = await deferredPrompt.userChoice;
           deferredPrompt = null;
+        } else if (isIOS()) {
+          // راهنمای ویژه آیفون
+          if(installMsg) installMsg.innerHTML =
+            'برای افزودن به صفحه اصلی در آیفون:<br>از پایین صفحه روی <span style="font-weight:bold;">اشتراک‌گذاری</span> (<svg style="display:inline;vertical-align:middle;" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M16 12l-4-4m0 0l-4 4m4-4v12" /></svg>) بزنید و سپس گزینه <b>"Add to Home Screen"</b> را انتخاب کنید.';
+        } else if (isAndroid() && !canInstall) {
+          // راهنمای ویژه اندروید بدون beforeinstallprompt
+          if(installMsg) installMsg.innerHTML =
+            'در اندروید، اگر دکمه افزودن به صفحه اصلی را نمی‌بینید، از منوی سه نقطه مرورگر گزینه <b>"Add to Home screen"</b> را انتخاب کنید.';
         } else {
-          // اگر beforeinstallprompt نبود، راهنمای عمومی بده
+          // راهنمای عمومی
           if(installMsg) installMsg.textContent = 'در صورتی که گزینه افزودن به صفحه اصلی را نمی‌بینید، از منوی مرورگر (سه نقطه یا اشتراک‌گذاری) گزینه "Add to Home Screen" یا "افزودن به صفحه اصلی" را انتخاب کنید.';
         }
       });
       // اگر beforeinstallprompt هرگز اجرا نشد (مثلاً در iOS یا برخی مرورگرها)
       setTimeout(() => {
         if (!canInstall && installMsg) {
-          installButton.disabled = false;
-          installMsg.textContent = 'در برخی مرورگرها (مانند سافاری یا کروم iOS)، برای افزودن به صفحه اصلی، از منوی اشتراک‌گذاری یا سه نقطه استفاده کنید.';
+          if(isIOS()) {
+            installMsg.innerHTML =
+              'برای افزودن به صفحه اصلی در آیفون:<br>از پایین صفحه روی <span style="font-weight:bold;">اشتراک‌گذاری</span> (<svg style="display:inline;vertical-align:middle;" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M16 12l-4-4m0 0l-4 4m4-4v12" /></svg>) بزنید و سپس گزینه <b>"Add to Home Screen"</b> را انتخاب کنید.';
+          } else if(isAndroid()) {
+            installMsg.innerHTML =
+              'در اندروید، اگر دکمه افزودن به صفحه اصلی را نمی‌بینید، از منوی سه نقطه مرورگر گزینه <b>"Add to Home screen"</b> را انتخاب کنید.';
+          } else {
+            installMsg.textContent = 'در صورتی که گزینه افزودن به صفحه اصلی را نمی‌بینید، از منوی مرورگر (سه نقطه یا اشتراک‌گذاری) گزینه "Add to Home Screen" یا "افزودن به صفحه اصلی" را انتخاب کنید.';
+          }
         }
       }, 2000);
     }
