--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
       <div class="about-container">
         <h1>درباره ما</h1>
         <div class="about-text">
