--- a/businesses.html
+++ b/businesses.html
@@ -10,7 +10,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
       <h1 class="text-2xl font-bold text-blue-900 mb-8 text-center">کسب‌وکارهای حامی مردم</h1>
       <div id="businesses-list"></div>
     </main>
